packages/bcode/tests/ui/fail/tool_handler_must_be_send_sync.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
  --> tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68
   |
15 |           .typed_tool(TypedTool::<Input, Output>::new("bad", "bad"), move |_input| {
   |            ----------                                                ^------------
   |            |                                                         |
   |  __________|_________________________________________________________within this `{closure@$DIR/tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68: 15:81}`
   | |          |
   | |          required by a bound introduced by this call
16 | |             let _state = Rc::clone(&state);
17 | |             Ok(Output)
18 | |         })
   | |_________^ `Rc<()>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68: 15:81}`, the trait `Send` is not implemented for `Rc<()>`
note: required because it's used within this closure
  --> tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68
   |
15 |         .typed_tool(TypedTool::<Input, Output>::new("bad", "bad"), move |_input| {
   |                                                                    ^^^^^^^^^^^^^
note: required by a bound in `AgentBuilder::typed_tool`
  --> src/lib.rs
   |
   |     pub fn typed_tool<I, O, F>(self, tool: TypedTool<I, O>, handler: F) -> Self
   |            ---------- required by a bound in this associated function
...
   |         F: Fn(I) -> std::result::Result<O, String> + Send + Sync + 'static,
   |                                                      ^^^^ required by this bound in `AgentBuilder::typed_tool`

error[E0277]: `Rc<()>` cannot be shared between threads safely
  --> tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68
   |
15 |           .typed_tool(TypedTool::<Input, Output>::new("bad", "bad"), move |_input| {
   |            ----------                                                ^------------
   |            |                                                         |
   |  __________|_________________________________________________________within this `{closure@$DIR/tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68: 15:81}`
   | |          |
   | |          required by a bound introduced by this call
16 | |             let _state = Rc::clone(&state);
17 | |             Ok(Output)
18 | |         })
   | |_________^ `Rc<()>` cannot be shared between threads safely
   |
   = help: within `{closure@$DIR/tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68: 15:81}`, the trait `Sync` is not implemented for `Rc<()>`
note: required because it's used within this closure
  --> tests/ui/fail/tool_handler_must_be_send_sync.rs:15:68
   |
15 |         .typed_tool(TypedTool::<Input, Output>::new("bad", "bad"), move |_input| {
   |                                                                    ^^^^^^^^^^^^^
note: required by a bound in `AgentBuilder::typed_tool`
  --> src/lib.rs
   |
   |     pub fn typed_tool<I, O, F>(self, tool: TypedTool<I, O>, handler: F) -> Self
   |            ---------- required by a bound in this associated function
...
   |         F: Fn(I) -> std::result::Result<O, String> + Send + Sync + 'static,
   |                                                             ^^^^ required by this bound in `AgentBuilder::typed_tool`
